[package]
name = "qw"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
indicatif = "0.18.4"
rand = "0.10.0"
rand_chacha = "0.10.0"
sha2 = "0.10.9"
symphonia = { version = "0.5.4", features = ["all"] }
jpeg-decoder = "0.3.1"
rayon = "1.10"
mp4 = "0.14"
rand_core = "0.10"
jpeg-encoder = "0.6"
zune-jpeg = "0.4"
zune-core = "0.4"
bytes = "1.11.1"
